interpreteur/y.output
   0  $accept : Asm $end

   1  Asm : Instructions

   2  Instructions : Instruction Instructions
   3               |

   4  Instruction : tadd treg tnb treg tnb treg tnb
   5              | tmul treg tnb treg tnb treg tnb
   6              | tdiv treg tnb treg tnb treg tnb
   7              | tsou treg tnb treg tnb treg tnb
   8              | tcop treg tnb treg tnb
   9              | tload treg tnb tnb
  10              | tstore tnb treg tnb
  11              | tafc treg tnb tnb
  12              | tequ treg tnb treg tnb treg tnb
  13              | tinf treg tnb treg tnb treg tnb
  14              | tinfe treg tnb treg tnb treg tnb
  15              | tsup treg tnb treg tnb treg tnb
  16              | tsupe treg tnb treg tnb treg tnb
  17              | tjmp tnb
  18              | tjmpc tnb treg tnb
  19              | tjmpr treg tnb

state 0
	$accept : . Asm $end  (0)
	Instructions : .  (3)

	tadd  shift 1
	tmul  shift 2
	tsou  shift 3
	tdiv  shift 4
	tcop  shift 5
	tafc  shift 6
	tload  shift 7
	tstore  shift 8
	tjmp  shift 9
	tinf  shift 10
	tinfe  shift 11
	tsup  shift 12
	tsupe  shift 13
	tjmpc  shift 14
	tjmpr  shift 15
	tequ  shift 16
	$end  reduce 3

	Asm  goto 17
	Instructions  goto 18
	Instruction  goto 19


state 1
	Instruction : tadd . treg tnb treg tnb treg tnb  (4)

	treg  shift 20
	.  error


state 2
	Instruction : tmul . treg tnb treg tnb treg tnb  (5)

	treg  shift 21
	.  error


state 3
	Instruction : tsou . treg tnb treg tnb treg tnb  (7)

	treg  shift 22
	.  error


state 4
	Instruction : tdiv . treg tnb treg tnb treg tnb  (6)

	treg  shift 23
	.  error


state 5
	Instruction : tcop . treg tnb treg tnb  (8)

	treg  shift 24
	.  error


state 6
	Instruction : tafc . treg tnb tnb  (11)

	treg  shift 25
	.  error


state 7
	Instruction : tload . treg tnb tnb  (9)

	treg  shift 26
	.  error


state 8
	Instruction : tstore . tnb treg tnb  (10)

	tnb  shift 27
	.  error


state 9
	Instruction : tjmp . tnb  (17)

	tnb  shift 28
	.  error


state 10
	Instruction : tinf . treg tnb treg tnb treg tnb  (13)

	treg  shift 29
	.  error


state 11
	Instruction : tinfe . treg tnb treg tnb treg tnb  (14)

	treg  shift 30
	.  error


state 12
	Instruction : tsup . treg tnb treg tnb treg tnb  (15)

	treg  shift 31
	.  error


state 13
	Instruction : tsupe . treg tnb treg tnb treg tnb  (16)

	treg  shift 32
	.  error


state 14
	Instruction : tjmpc . tnb treg tnb  (18)

	tnb  shift 33
	.  error


state 15
	Instruction : tjmpr . treg tnb  (19)

	treg  shift 34
	.  error


state 16
	Instruction : tequ . treg tnb treg tnb treg tnb  (12)

	treg  shift 35
	.  error


state 17
	$accept : Asm . $end  (0)

	$end  accept


state 18
	Asm : Instructions .  (1)

	.  reduce 1


state 19
	Instructions : Instruction . Instructions  (2)
	Instructions : .  (3)

	tadd  shift 1
	tmul  shift 2
	tsou  shift 3
	tdiv  shift 4
	tcop  shift 5
	tafc  shift 6
	tload  shift 7
	tstore  shift 8
	tjmp  shift 9
	tinf  shift 10
	tinfe  shift 11
	tsup  shift 12
	tsupe  shift 13
	tjmpc  shift 14
	tjmpr  shift 15
	tequ  shift 16
	$end  reduce 3

	Instructions  goto 36
	Instruction  goto 19


state 20
	Instruction : tadd treg . tnb treg tnb treg tnb  (4)

	tnb  shift 37
	.  error


state 21
	Instruction : tmul treg . tnb treg tnb treg tnb  (5)

	tnb  shift 38
	.  error


state 22
	Instruction : tsou treg . tnb treg tnb treg tnb  (7)

	tnb  shift 39
	.  error


state 23
	Instruction : tdiv treg . tnb treg tnb treg tnb  (6)

	tnb  shift 40
	.  error


state 24
	Instruction : tcop treg . tnb treg tnb  (8)

	tnb  shift 41
	.  error


state 25
	Instruction : tafc treg . tnb tnb  (11)

	tnb  shift 42
	.  error


state 26
	Instruction : tload treg . tnb tnb  (9)

	tnb  shift 43
	.  error


state 27
	Instruction : tstore tnb . treg tnb  (10)

	treg  shift 44
	.  error


state 28
	Instruction : tjmp tnb .  (17)

	.  reduce 17


state 29
	Instruction : tinf treg . tnb treg tnb treg tnb  (13)

	tnb  shift 45
	.  error


state 30
	Instruction : tinfe treg . tnb treg tnb treg tnb  (14)

	tnb  shift 46
	.  error


state 31
	Instruction : tsup treg . tnb treg tnb treg tnb  (15)

	tnb  shift 47
	.  error


state 32
	Instruction : tsupe treg . tnb treg tnb treg tnb  (16)

	tnb  shift 48
	.  error


state 33
	Instruction : tjmpc tnb . treg tnb  (18)

	treg  shift 49
	.  error


state 34
	Instruction : tjmpr treg . tnb  (19)

	tnb  shift 50
	.  error


state 35
	Instruction : tequ treg . tnb treg tnb treg tnb  (12)

	tnb  shift 51
	.  error


state 36
	Instructions : Instruction Instructions .  (2)

	.  reduce 2


state 37
	Instruction : tadd treg tnb . treg tnb treg tnb  (4)

	treg  shift 52
	.  error


state 38
	Instruction : tmul treg tnb . treg tnb treg tnb  (5)

	treg  shift 53
	.  error


state 39
	Instruction : tsou treg tnb . treg tnb treg tnb  (7)

	treg  shift 54
	.  error


state 40
	Instruction : tdiv treg tnb . treg tnb treg tnb  (6)

	treg  shift 55
	.  error


state 41
	Instruction : tcop treg tnb . treg tnb  (8)

	treg  shift 56
	.  error


state 42
	Instruction : tafc treg tnb . tnb  (11)

	tnb  shift 57
	.  error


state 43
	Instruction : tload treg tnb . tnb  (9)

	tnb  shift 58
	.  error


state 44
	Instruction : tstore tnb treg . tnb  (10)

	tnb  shift 59
	.  error


state 45
	Instruction : tinf treg tnb . treg tnb treg tnb  (13)

	treg  shift 60
	.  error


state 46
	Instruction : tinfe treg tnb . treg tnb treg tnb  (14)

	treg  shift 61
	.  error


state 47
	Instruction : tsup treg tnb . treg tnb treg tnb  (15)

	treg  shift 62
	.  error


state 48
	Instruction : tsupe treg tnb . treg tnb treg tnb  (16)

	treg  shift 63
	.  error


state 49
	Instruction : tjmpc tnb treg . tnb  (18)

	tnb  shift 64
	.  error


state 50
	Instruction : tjmpr treg tnb .  (19)

	.  reduce 19


state 51
	Instruction : tequ treg tnb . treg tnb treg tnb  (12)

	treg  shift 65
	.  error


state 52
	Instruction : tadd treg tnb treg . tnb treg tnb  (4)

	tnb  shift 66
	.  error


state 53
	Instruction : tmul treg tnb treg . tnb treg tnb  (5)

	tnb  shift 67
	.  error


state 54
	Instruction : tsou treg tnb treg . tnb treg tnb  (7)

	tnb  shift 68
	.  error


state 55
	Instruction : tdiv treg tnb treg . tnb treg tnb  (6)

	tnb  shift 69
	.  error


state 56
	Instruction : tcop treg tnb treg . tnb  (8)

	tnb  shift 70
	.  error


state 57
	Instruction : tafc treg tnb tnb .  (11)

	.  reduce 11


state 58
	Instruction : tload treg tnb tnb .  (9)

	.  reduce 9


state 59
	Instruction : tstore tnb treg tnb .  (10)

	.  reduce 10


state 60
	Instruction : tinf treg tnb treg . tnb treg tnb  (13)

	tnb  shift 71
	.  error


state 61
	Instruction : tinfe treg tnb treg . tnb treg tnb  (14)

	tnb  shift 72
	.  error


state 62
	Instruction : tsup treg tnb treg . tnb treg tnb  (15)

	tnb  shift 73
	.  error


state 63
	Instruction : tsupe treg tnb treg . tnb treg tnb  (16)

	tnb  shift 74
	.  error


state 64
	Instruction : tjmpc tnb treg tnb .  (18)

	.  reduce 18


state 65
	Instruction : tequ treg tnb treg . tnb treg tnb  (12)

	tnb  shift 75
	.  error


state 66
	Instruction : tadd treg tnb treg tnb . treg tnb  (4)

	treg  shift 76
	.  error


state 67
	Instruction : tmul treg tnb treg tnb . treg tnb  (5)

	treg  shift 77
	.  error


state 68
	Instruction : tsou treg tnb treg tnb . treg tnb  (7)

	treg  shift 78
	.  error


state 69
	Instruction : tdiv treg tnb treg tnb . treg tnb  (6)

	treg  shift 79
	.  error


state 70
	Instruction : tcop treg tnb treg tnb .  (8)

	.  reduce 8


state 71
	Instruction : tinf treg tnb treg tnb . treg tnb  (13)

	treg  shift 80
	.  error


state 72
	Instruction : tinfe treg tnb treg tnb . treg tnb  (14)

	treg  shift 81
	.  error


state 73
	Instruction : tsup treg tnb treg tnb . treg tnb  (15)

	treg  shift 82
	.  error


state 74
	Instruction : tsupe treg tnb treg tnb . treg tnb  (16)

	treg  shift 83
	.  error


state 75
	Instruction : tequ treg tnb treg tnb . treg tnb  (12)

	treg  shift 84
	.  error


state 76
	Instruction : tadd treg tnb treg tnb treg . tnb  (4)

	tnb  shift 85
	.  error


state 77
	Instruction : tmul treg tnb treg tnb treg . tnb  (5)

	tnb  shift 86
	.  error


state 78
	Instruction : tsou treg tnb treg tnb treg . tnb  (7)

	tnb  shift 87
	.  error


state 79
	Instruction : tdiv treg tnb treg tnb treg . tnb  (6)

	tnb  shift 88
	.  error


state 80
	Instruction : tinf treg tnb treg tnb treg . tnb  (13)

	tnb  shift 89
	.  error


state 81
	Instruction : tinfe treg tnb treg tnb treg . tnb  (14)

	tnb  shift 90
	.  error


state 82
	Instruction : tsup treg tnb treg tnb treg . tnb  (15)

	tnb  shift 91
	.  error


state 83
	Instruction : tsupe treg tnb treg tnb treg . tnb  (16)

	tnb  shift 92
	.  error


state 84
	Instruction : tequ treg tnb treg tnb treg . tnb  (12)

	tnb  shift 93
	.  error


state 85
	Instruction : tadd treg tnb treg tnb treg tnb .  (4)

	.  reduce 4


state 86
	Instruction : tmul treg tnb treg tnb treg tnb .  (5)

	.  reduce 5


state 87
	Instruction : tsou treg tnb treg tnb treg tnb .  (7)

	.  reduce 7


state 88
	Instruction : tdiv treg tnb treg tnb treg tnb .  (6)

	.  reduce 6


state 89
	Instruction : tinf treg tnb treg tnb treg tnb .  (13)

	.  reduce 13


state 90
	Instruction : tinfe treg tnb treg tnb treg tnb .  (14)

	.  reduce 14


state 91
	Instruction : tsup treg tnb treg tnb treg tnb .  (15)

	.  reduce 15


state 92
	Instruction : tsupe treg tnb treg tnb treg tnb .  (16)

	.  reduce 16


state 93
	Instruction : tequ treg tnb treg tnb treg tnb .  (12)

	.  reduce 12


21 terminals, 4 nonterminals
20 grammar rules, 94 states
